# BallsEngine

./: .gitignore  CMakeLists.txt  MegaEngine.sln  README.md
BallsTesting/: BallsTesting.vcxproj  testing.cpp
Editor/: Editor.csproj  MainWindow.xaml  MainWindow.xaml.cs
Editor/Common/: ViewModelBase.cs
Editor/GameProject/: BrowserDialog.xaml  BrowserDialog.xaml.cs  NewProject.cs  NewProjectView.xaml  NewProjectView.xaml.cs  OpenProjectView.xaml  OpenProjectView.xaml.cs
Editor/ProjectTemplates/EmptyProject/: template.xml
Editor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Editor/Utilities/: Serializer.cs  StringUtils.cs
Engine/: CMakeLists.txt  CPPLINT.cfg  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  vulkanzor.cpp
Engine/lib_src/: Testing.cpp  Testing.h
Engine/lib_src/Core/: Core.cpp  Core.h
Engine/lib_src/Core/Logger/: Logger.h
Engine/lib_src/GraphicsLib/: CPPLINT.cfg  Constants.h  VulkanInit.cpp  VulkanInit.h
Engine/lib_src/Shaders/: shader.vert
Engine/src/: CPPLINT.cfg  main.cpp
PenixEngine/: CMakeLists.txt  CPPLINT.cfg  env.example.cmake
PenixEngine/lib_src/: PenixEngine.cpp  PenixEngine.h  Testing.cpp  Testing.h
PenixEngine/lib_src/Core/: Core.h
PenixEngine/lib_src/GraphicsLib/: VulkanInit.cpp
PenixEngine/src/: main.cpp
